--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
       <header>
         <img src="./assets/feri01m.jpg" alt="Farzad Dianat's profile picture" />
-        <h1>@Cyiran</h1>
+        <h1>@Cyiran_</h1>
       </header>
       <ul>
         <li>
